# Data_Mining_Project

./: README.md  pyproject.toml
configs/: default.yaml
dr_odir_classifier/: requirements.txt
dr_odir_classifier/notebooks/: data_project.ipynb
dr_odir_classifier/scripts/: quick_test.py  train_backbones.py  validate_against_notebook.py
dr_odir_classifier/src/dr_odir_classifier/: __init__.py  losses.py  metrics.py  plots.py
dr_odir_classifier/src/dr_odir_classifier/models/: __init__.py
dr_odir_classifier/src/dr_odir_classifier/training/: engine.py
dr_odir_classifier/src/dr_odir_classifier/utils/: __init__.py
scripts/: evaluate_tta.py
src/dr_odir_classifier/: config.py  evaluation.py  metrics.py
src/dr_odir_classifier/data/: __init__.py  dataset.py  transforms.py
src/dr_odir_classifier/models/: factory.py
